src/containers/Tenant/Diagnostics/Diagnostics.scss
.kv-tenant-diagnostics {
    overflow: hidden;

    height: 100%;
    &__header-wrapper {
        position: sticky;
        z-index: 2;
        top: 0;
        left: 0;

        padding: 13px 20px 16px;

        background-color: var(--yc-color-base-background);
    }

    &__tabs {
        display: flex;
        justify-content: space-between;
        align-items: center;

        box-shadow: inset 0 -1px 0 0 var(--yc-color-line-generic);
        & .yc-tabs_direction_horizontal {
            box-shadow: unset;
        }
    }

    &__tab {
        margin-right: 40px;

        text-decoration: none;

        &:first-letter {
            text-transform: uppercase;
        }
    }

    &__page-wrapper {
        overflow: auto;

        width: 100%;
        height: calc(100% - 69px);
        padding: 0 20px;

        & .global-storage {
            height: calc(100% + 16px);
            max-height: calc(100% + 16px);
            margin-top: -16px;
        }
    }
}

